tests/good/misc/char-lit.pas
program CharLit;

begin
    WriteLn(Char('a'));
    WriteLn(Char(#10))
end.
