tests/bad/bad-char-lit-2.pas
program BadCharLit2;

begin
    WriteLn(Char('hi'))
end.
